<resources>
    <string name="app_name">Donation Exploration</string>
    <string name="areyoua">Are you a:</string>
    <string name="user">Donor</string>
    <string name="charity">Charity</string>
    <string name="updateneeds">Update Needs:</string>
    <string name="editlist">Edit List</string>
    <string name="additem">Add Item</string>
    <string name="login">Login</string>
    <string name="item">Item</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address:</string>
    <string name="clothingtype">Clothing Type:</string>
    <string name="numneeded">Amount Needed:</string>
    <string name="numitems">Number of Items</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="location">Location Address</string>
    <string name="password">Password</string>
    <string name="confpass">Confirm Password</string>
    <string name="reenterpass">Re-enter Password</string>
    <string name="donatehere">Donate Here</string>
    <string name="locations">Locations</string>
    <string name="createaprofile">Create a Profile</string>
    <string name="charityname">Charity Name</string>
    <string name="charitydescription">Description of Charity</string>
    <string name="websitelinkplaceholder">Website Link</string>
    <string name="changeclothing">Change Clothing:</string>
    <string name="save">Save Changes</string>
    <string name="delete">Delete Item</string>
    <string name="changenum">Change Amount:</string>
    <string name="enter">Enter</string>
    <string name="signout">Sign Out</string>
    <string name="viewneedslist">View Needs List</string>
    <string name="charitylogo">Charity Logo</string>
    <string name="addlocation">Add Location</string>
    <string name="newaccount">New Account</string>
    <string name="makeaccount">Make Account</string>
    <string name="uploadfile">Upload File</string>
    <string name="addneed">Add to Needs List</string>
</resources>
